@@ -5,13 +5,9 @@ import com.makersacademy.acebook.model.Post;
 import com.makersacademy.acebook.model.User;
 import com.makersacademy.acebook.repository.CommentRepository;
 import com.makersacademy.acebook.repository.PostRepository;
-import com.makersacademy.acebook.repository.UserRepository;
+import jakarta.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Sort;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.security.oauth2.core.oidc.user.OidcUser;
 import org.springframework.stereotype.Controller;
-import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.view.RedirectView;
 
@@ -24,33 +20,47 @@ public class CommentController {
     @Autowired
     private PostRepository postRepository;
 
-    @Autowired
-    private UserRepository userRepository;
-
     @PostMapping("/posts/{postId}/comments")
     public RedirectView addComment(
             @PathVariable Long postId,
             @RequestParam String content,
-            @AuthenticationPrincipal OidcUser principal) {
-        if (content.trim().isEmpty()) {
+            HttpSession session
+    ) {
+        User user = (User) session.getAttribute("user");
+        if (user == null) {
+            return new RedirectView("/login");
+        }
+        if (content == null || content.isBlank()) {
             return new RedirectView("/posts?error=emptyComment");
         }
         Post post = postRepository.findById(postId)
-                .orElseThrow(() -> new RuntimeException("Post not found"));
-        String email = principal.getAttribute("email");
-        User user = userRepository.findUserByUsername(email)
-                .orElseThrow(() -> new RuntimeException("User not found"));
-        Comment comment = new Comment(post, user, content);
+                .orElseThrow(() -> new IllegalArgumentException("Post not found"));
+        var comment = new Comment(post, user, content);
         commentRepository.save(comment);
+        return new RedirectView("/posts");
+    }
+
+
+    @PostMapping("/comments/{commentId}/delete")
+    public RedirectView deleteComment(
+            @PathVariable Long commentId,
+            HttpSession session
+    ) {
+        User currentUser = (User) session.getAttribute("user");
+        commentRepository.findById(commentId).ifPresent(c -> {
+            if (currentUser != null && c.getUser().getId().equals(currentUser.getId())) {
+                commentRepository.deleteById(commentId);
+            }
+        });
         return new RedirectView("/posts");
     }
 
     @PostMapping("/comments/{commentId}/like")
     public RedirectView likeComment(@PathVariable Long commentId) {
-        Comment comment = commentRepository.findById(commentId)
-                .orElseThrow(() -> new RuntimeException("Comment not found"));
-        comment.setLikeCount(comment.getLikeCount() + 1);
-        commentRepository.save(comment);
+        var c = commentRepository.findById(commentId)
+                .orElseThrow(() -> new IllegalArgumentException("Comment not found"));
+        c.setLikeCount(c.getLikeCount() + 1);
+        commentRepository.save(c);
         return new RedirectView("/posts");
     }
 
@@ -65,4 +75,3 @@ public class CommentController {
         return new RedirectView("/posts");
     }
 }
-
